configurando o css do formulário

--- a/src/App.css
+++ b/src/App.css
@@ -52,3 +52,26 @@ input, textarea {
 textarea {
     height: 120px;
 }
+
+.actions {
+    display: flex;
+    justify-content: flex-end;
+    gap: 2rem;
+}
+
+.actions button {
+    font-size: 0.9rem;
+    padding: 0.5rem 1rem;
+    display: flex;
+    gap: 0.5rem;
+    align-items: center;
+    border-radius: 3px;
+    background-color: #dfdfdf;
+    cursor: pointer;
+    border: none;
+    transition: 0.3s;
+}
+
+.actions button:hover {
+    background-color: #cfcfcf;
+}
