--- a/src/components/ReviewForm.css
+++ b/src/components/ReviewForm.css
@@ -1,7 +1,30 @@
 .form-control.score-container {
+
+    flex-direction: row;
     justify-content: center;
+    gap: .2rem;
 }
 
-.form-control svg {
-    gap: 2rem;
+.score-container svg {
+    font-size: 1.6rem;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.score-container:hover {
+    fill: #7076f4;
+}
+
+.score-container input:checked ~ svg {
+    fill: #7076f4;
+}
+
+.radio-container {
+    text-align: center;
+    position: relative;
+}
+
+.radio-container input {
+    opacity: 0;
+    position: absolute;
 }
