--- a/src/components/ReviewForm.css
+++ b/src/components/ReviewForm.css
@@ -2,7 +2,7 @@
 
     flex-direction: row;
     justify-content: center;
-    gap: .2rem;
+    gap: 2rem;
 }
 
 .score-container svg {
@@ -27,4 +27,13 @@
 .radio-container input {
     opacity: 0;
     position: absolute;
+    top: 15px;
+    left: 20px;
+}
+
+.radio-container p {
+    font-style: italic;
+    font-size: 0.7rem;
+    font-weight: 300;
+    margin-top: 0.4rem;
 }
